# proto

./: CHANGELOG.md  Cargo.toml  dist-workspace.toml
crates/cli/: Cargo.toml
crates/cli/src/: app.rs  error.rs  helpers.rs  main.rs  main_shim.rs  session.rs  shell.rs  systems.rs
crates/cli/src/commands/: activate.rs  alias.rs  clean.rs  mcp.rs  outdated.rs  run.rs  setup.rs  upgrade.rs  versions.rs
crates/cli/src/commands/plugin/: info.rs  list.rs
crates/cli/src/mcp/: server.rs
crates/cli/src/utils/: progress_instance.rs  tool_record.rs
crates/cli/src/workflows/: install_workflow.rs
crates/cli/tests/: activate_test.rs  bin_test.rs  clean_test.rs  completions_test.rs  exec_test.rs  general_test.rs  mcp_test.rs  plugins_test.rs  run_test.rs
crates/cli/tests/snapshots/: activate_test__activate__can_disable_init-13.snap  activate_test__activate__can_disable_init-2.snap  activate_test__activate__can_disable_init-8.snap  activate_test__activate__empty_output_if_no_tools-13.snap  activate_test__activate__export__includes_shell_aliases_if_no_tools-8.snap  activate_test__activate__passes_args_through-13.snap  activate_test__activate__passes_args_through-2.snap  activate_test__activate__passes_args_through-8.snap  activate_test__activate__supports_json_exports.snap  activate_test__activate__supports_many_tools-2.snap  activate_test__activate__supports_one_tool-8.snap  plugins_test__plugins__builtins__supports_java.snap
crates/codegen/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: config.rs  helpers.rs  lib.rs  loader_error.rs  reporter.rs  test_utils.rs  tool.rs  tool_error.rs  version_resolver.rs
crates/core/src/checksum/: sha.rs
crates/core/src/flow/: build.rs  build_error.rs  install.rs  link.rs  resolve.rs
crates/core/src/layout/: inventory.rs  shim_registry.rs
crates/core/src/settings/: settings.rs
crates/core/src/utils/: archive.rs
crates/core/tests/: config_test.rs  inventory_test.rs  resolver_test.rs  shim_registry_test.rs  version_resolver_test.rs
crates/pdk/: Cargo.toml
crates/pdk-api/: Cargo.toml
crates/pdk-api/src/api/: build.rs  mod.rs
crates/pdk-api/tests/: load_versions_test.rs
crates/pdk-test-utils/: Cargo.toml
crates/pdk-test-utils/src/: lib.rs
crates/shim/: Cargo.toml
crates/shim/src/: lib.rs
crates/version-spec/: Cargo.toml
crates/version-spec/src/: lib.rs  resolved_spec.rs  spec_error.rs  syntax.pest  syntax.rs  syntax_parser.rs  syntax_traits.rs  unresolved_parser.rs  unresolved_spec.rs
crates/version-spec/tests/: resolved_spec_test.rs  size_probe.rs  syntax_compat_test.rs  syntax_format_test.rs  syntax_test.rs  unresolved_spec_test.rs
crates/warpgate/: Cargo.toml
crates/warpgate-api/: Cargo.toml
crates/warpgate-api/src/: locator.rs
crates/warpgate-pdk/: Cargo.toml
crates/warpgate/src/: loader.rs  loader_error.rs
crates/warpgate/src/protocols/: data.rs  file.rs  mod.rs
crates/warpgate/tests/: helpers_test.rs
e2e/lib/: utils.sh
e2e/tests/: 24-install-java-jdk.sh  25-install-java-jre.sh  51-npm-nested-scripts.sh
package/src/: api-types.ts
plugins/: Cargo.toml
registry/data/: built-in.json  third-party.json
