[package]
name = "version_spec"
version = "0.11.2"
edition = "2024"
license = "MIT"
description = "A specification for working with partial, full, or aliased versions. Supports semver and calver."
homepage = "https://moonrepo.dev/proto"
repository = "https://github.com/moonrepo/proto"
rust-version = "1.85.0"

[dependencies]
compact_str = { workspace = true }
human-sort = { workspace = true }
pest = "2.8.7"
pest_derive = "2.8.7"
regex = { workspace = true }
schematic = { workspace = true, optional = true, features = ["schema"] }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[features]
default = []
schematic = ["dep:schematic"]
